Added more styling

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="top-nav">
-        <button class="nav-btn" id="back-btn">&larr;</button>
-        <button class="nav-btn" id="forward-btn">&rarr;</button>
+        <button class="nav-btn" data-description="Back" id="back-btn">&larr;</button>
+        <button class="nav-btn" data-description="Forward" id="forward-btn">&rarr;</button>
         <input type="text" class="search-bar" placeholder="Search Google or type a URL">
         <button class="nav-btn" id="favorite-btn">&#9733;</button>
         <button class="nav-btn" id="more-options-btn">&#8942;</button>
