--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="right-icons">
             <a href="https://mail.google.com/">Gmail</a>
             <a href="https://www.google.com/images">Images</a>
-            <img src="search lab.png" alt="Search Lab Icon" class="icon">
+            <img src="searchlab.png" alt="Search Lab Icon" id="icon" class="icon">
             <div class="profile-pic">
                 <span class="A">A</span>
             </div>
