--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="qTyP4QXUyVKmallS2N7cd98yCNtUov0eX3ckLUN2Bg8" />
     <title>Google Clone</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -11,8 +12,8 @@
         <button class="nav-btn" data-description="Back" id="back-btn">&larr;</button>
         <button class="nav-btn" data-description="Forward" id="forward-btn">&rarr;</button>
         <input type="text" class="search-bar" placeholder="Search Google or type a URL">
-        <button class="nav-btn" id="favorite-btn">&#9733;</button>
-        <button class="nav-btn" id="more-options-btn">&#8942;</button>
+        <button class="nav-btn-right" id="favorite-btn">&#9733;</button>
+        <button class="nav-btn-right" id="more-options-btn">&#8942;</button>
     </div>
 
     <div class="icon-bar">
@@ -37,7 +38,7 @@
         <div class="right-icons">
             <a href="https://mail.google.com/">Gmail</a>
             <a href="https://www.google.com/images">Images</a>
-            <img src="searchlab.png" alt="Search Lab Icon" id="icon" class="icon">
+            
             <div class="profile-pic">
                 <span class="A">A</span>
             </div>
